NIFI-11255 Allowable value for 'Use s3.region Attribute'